<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tvBillLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/bill_amount_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvBillLabel"
        android:layout_alignBottom="@+id/tvBillLabel"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvBillLabel"
        android:ems="10"
        android:hint="@string/bill_amount_hint"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnTipMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="75dp"
        android:text="@string/tip_max_button_label"
        android:onClick="tipBtnMaxClicked" />
    
    <Button
        android:id="@+id/btnTipMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="75dp"
        android:layout_toLeftOf="@+id/btnTipMax"
        android:text="@string/tip_med_button_label" 
        android:onClick="tipBtnMedClicked" />

    <Button
        android:id="@+id/btnTipMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="75dp"
        android:layout_toLeftOf="@+id/btnTipMed"
        android:text="@string/tip_min_button_label"
        android:onClick="tipBtnMinClicked"  />
 
    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="150dp"
        android:text="@string/tip_amount_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipLabel"
        android:layout_alignBottom="@+id/tvTipLabel"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvTipLabel"
        android:ems="10"
        android:hint="@string/tip_amount_hint"
        android:inputType="numberDecimal" >
    </EditText>
    
    <TextView
        android:id="@+id/tvTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="210dp"
        android:text="@string/grand_total_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTotalLabel"
        android:layout_alignBottom="@+id/tvTotalLabel"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvTotalLabel"
        android:ems="10"
        android:hint="@string/grand_total_hint"
        android:inputType="numberDecimal" >
    </EditText>
    
</RelativeLayout>
